# E-commerce-Mini-Amazon

./: .gitignore  CMakeLists.txt  makefile  readme.md
includes/: Cart.h  Client.h  Clothing.h  Electronic.h  Food.h  Order.h  Product.h  RecommendationEngine.h  Utils.h
src/: Cart.cpp  Client.cpp  Clothing.cpp  Electronic.cpp  Food.cpp  Order.cpp  Product.cpp  RecommendationEngine.cpp  Utils.cpp  main.cpp
